--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,50 @@
 2020-02-03  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r255380. rdar://problem/59004377
+
+    Fix small memory regression caused by r206365
+    https://bugs.webkit.org/show_bug.cgi?id=206557
+    
+    Reviewed by Yusuke Suzuki.
+    
+    Put StructureRareData::m_giveUpOnObjectToStringValueCache into m_objectToStringValue to prevent increasing StructureRareData's size. We make a special value for the pointer
+    objectToStringCacheGiveUpMarker() to signal that we should not cache the string value. As a result, adding m_transitionOffset does not increase the size of the class.
+    
+    * runtime/Structure.h:
+    * runtime/StructureRareData.cpp:
+    (JSC::StructureRareData::StructureRareData):
+    (JSC::StructureRareData::visitChildren):
+    (JSC::StructureRareData::setObjectToStringValue):
+    (JSC::StructureRareData::clearObjectToStringValue):
+    * runtime/StructureRareData.h:
+    * runtime/StructureRareDataInlines.h:
+    (JSC::StructureRareData::objectToStringValue const):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255380 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-29  Justin Michaud  <justin_michaud@apple.com>
+
+            Fix small memory regression caused by r206365
+            https://bugs.webkit.org/show_bug.cgi?id=206557
+
+            Reviewed by Yusuke Suzuki.
+
+            Put StructureRareData::m_giveUpOnObjectToStringValueCache into m_objectToStringValue to prevent increasing StructureRareData's size. We make a special value for the pointer
+            objectToStringCacheGiveUpMarker() to signal that we should not cache the string value. As a result, adding m_transitionOffset does not increase the size of the class.
+
+            * runtime/Structure.h:
+            * runtime/StructureRareData.cpp:
+            (JSC::StructureRareData::StructureRareData):
+            (JSC::StructureRareData::visitChildren):
+            (JSC::StructureRareData::setObjectToStringValue):
+            (JSC::StructureRareData::clearObjectToStringValue):
+            * runtime/StructureRareData.h:
+            * runtime/StructureRareDataInlines.h:
+            (JSC::StructureRareData::objectToStringValue const):
+
+2020-02-03  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254760. rdar://problem/59004377
 
     Separate storage of Structure::m_offset into transition and max offset
