Unreviewed, fix the internal build after <rdar://problem/59132944>
* UIProcess/ios/WKContentViewInteraction.h: Declare this helper in the header, now that it's consulted by some
WebKitAdditions code.

Canonical link: https://commits.webkit.org/220176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255658 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,12 @@
 2020-02-03  Wenson Hsieh  <wenson_hsieh@apple.com>
 
+        Unreviewed, fix the internal build after <rdar://problem/59132944>
+
+        * UIProcess/ios/WKContentViewInteraction.h: Declare this helper in the header, now that it's consulted by some
+        WebKitAdditions code.
+
+2020-02-03  Wenson Hsieh  <wenson_hsieh@apple.com>
+
         Add a WebKitAdditions hook to override the behavior of -[WKContentView gestureRecognizer:shouldReceiveTouch:]
         https://bugs.webkit.org/show_bug.cgi?id=207162
         <rdar://problem/59129739>
