[JSC] Use PackedPtr for VariableEnvironment https://bugs.webkit.org/show_bug.cgi?id=207172
Reviewed by Mark Lam.

Since VariableEnvironment's KeyValue is key: pointer + value: 2 byte, using PackedPtr can make it 8 bytes, 50% reduction.

* parser/VariableEnvironment.h:
* runtime/CachedTypes.cpp:
(JSC::CachedRefPtr::encode):
(JSC::CachedRefPtr::decode const): CachedTypes should handle PackedPtr too since VariableEnvironment starts using it.

Canonical link: https://commits.webkit.org/220177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255659 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,17 @@
+2020-02-03  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] Use PackedPtr for VariableEnvironment
+        https://bugs.webkit.org/show_bug.cgi?id=207172
+
+        Reviewed by Mark Lam.
+
+        Since VariableEnvironment's KeyValue is key: pointer + value: 2 byte, using PackedPtr can make it 8 bytes, 50% reduction.
+
+        * parser/VariableEnvironment.h:
+        * runtime/CachedTypes.cpp:
+        (JSC::CachedRefPtr::encode):
+        (JSC::CachedRefPtr::decode const): CachedTypes should handle PackedPtr too since VariableEnvironment starts using it.
+
 2020-02-03  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         \0 identity escapes should be syntax errors in Unicode patterns only
